# zephyr-secure-supervisor

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  SECURITY_BACKLOG.md  prj.conf  prj_provision.conf  west.yml
.github/workflows/: native-sim.yml
boards/: README.md  nucleo_l053r8_secure_supervisor.overlay  nucleo_l053r8_secure_supervisor_app.overlay
docs/: MISRA_DEVIATIONS.md  app_crypto.md  architecture.md  components.md  crypto_backends.md  deployment.md  log_utils.md  memory_budget.md  persist_state.md  recovery.md  release.md  sensor_hts221.md  simple_aes.md  supervisor.md  testing.md  uart_commands.md  watchdog_ctrl.md
docs/release_logs/v1.0/: app_curve_uart.txt  misra_curve_uart.txt  provision_auto_persist_uart.txt  thread_fail_uart.txt
scripts/: test_all_configs.sh
src/: app_crypto.c  app_crypto.h  curve25519_ref10.c  curve25519_ref10.h  log_utils.h  main.c  persist_state.c  persist_state.h  persist_state_priv.h  persist_state_test.h  recovery.c  recovery.h  recovery_test.h  safe_memory.h  sensor_hts221.c  sensor_hts221.h  simple_aes.c  simple_aes.h  supervisor.c  supervisor.h  supervisor_test.h  uart_commands.c  uart_commands.h  watchdog_ctrl.c  watchdog_ctrl.h
tests/: README.md
tests/common/: native.overlay
tests/persist_state/: CMakeLists.txt  prj.conf  prj_curve.conf  testcase.yaml
tests/persist_state/src/: main.c
tests/supervisor/: CMakeLists.txt  prj.conf  testcase.yaml
tests/supervisor/src/: main.c  stubs.c
tests/thread_fail/: CMakeLists.txt  README.md  prj.conf
tests/thread_fail/src/: sensor_stub.c
tests/unit/misra_stage1/: CMakeLists.txt  prj.conf  prj_curve.conf  testcase.yaml
tests/unit/misra_stage1/src/: main.c  mock_watchdog_ctrl.c
tools/: README.md  provision_curve.py  update_provision_overlay.py
